--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Digital Timer with bootstrap</title>
+    <title>Challenge week 7</title>
     <script src="main.js" defer></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -25,7 +25,7 @@
       "
     >
       <h2 class="fs-3 text-white">Digital Timer or Stopwatch</h2>
-      <h3 class="fs-5 text-white">Homework SIIT</h3>
+      <h3 class="fs-5 text-white">Challenge week 4</h3>
       <p class="mt-5 text-white fs-1 fw-bold"><span id="timer"></span></p>
       <div
         class="
