--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge week 7</title>
-    <script src="main.js" defer></script>
+    <title>Digital Timer</title>
+    <script src="./main.js" defer></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./clock.png">
   </head>
   <body class="bg-danger bg-opacity-75">
     <main
@@ -25,7 +26,6 @@
       "
     >
       <h2 class="fs-3 text-white">Digital Timer or Stopwatch</h2>
-      <h3 class="fs-5 text-white">Challenge week 4</h3>
       <p class="mt-5 text-white fs-1 fw-bold"><span id="timer"></span></p>
       <div
         class="
